tests/templates/immutable/07-headlamp-sso-no-service-proxy/baseline/manifests/utilities/resources/headlamp-ingress.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.




  






---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: pomerium
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Headlamp"
    forecastle.stakater.com/icon: "https://headlamp.dev/img/logo.svg"
    forecastle.stakater.com/group: "headlamp"
spec:
  ingressClassName: internal
  rules:
    - host: dashboard.internal.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # SSO mode: Pomerium (not Headlamp directly) terminates the request, authenticates
                # the user against the IdP and injects the bearer token before proxying to Headlamp.
                name: pomerium
                port:
                  number: 80
  tls:
    - hosts:
        - dashboard.internal.example.com
